--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     // Kotlin Coroutine
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
 
+    // Picasso Library
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
