--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id ("androidx.navigation.safeargs.kotlin")
+    id 'com.google.secrets_gradle_plugin' version '0.4'
 }
 
 android {
