--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id ("androidx.navigation.safeargs.kotlin")
     id 'com.google.secrets_gradle_plugin' version '0.4'
+    id("kotlin-kapt")
+    id("dagger.hilt.android.plugin")
 }
 
 android {
@@ -76,4 +78,13 @@ dependencies {
 
     // Picasso Library
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // Hilt Library for Dependency Injection
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
