--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SearchFlickr">
         <activity
-            android:name=".activity.MainActivity"
+            android:name="com.njuacha.searchflickr.ui.activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.SearchFlickr.NoActionBar">
             <intent-filter>
